# Poisoned-Chalice-Competition-2026

./: .gitignore  Kaggle_path.md  download_all_local.py
PoisonedChalice/: .gitignore  Comp_Info.md  Dockerfile  Loss.py  MIAttack.py  MinKProbAttack.py  Pac.py  README.md  SamplePaper.md  download_data.py  kaggle_comprehensive.ipynb  kaggle_notebook.ipynb  kaggle_script.py  process.py  pyproject.toml  requirements.txt  run.py
PoisonedChalice/experiments/: EXP01_baseline.py  EXP02_mink_plus_plus.py  EXP03_neighborhood_loss.py  EXP04_sect_divergence.py  EXP05_sia_tts.py  EXP06_sia_tts_funnel.py  EXP07_adversarial_stability.py  EXP08_graph_invariance.py  EXP09_semantic_canonicalization.py  EXP10_ensemble_sota.py  EXP11_gradient_norm.py  EXP12_hessian_trace.py  EXP13_layer_gradient_norms.py  EXP14_internal_state_entropy.py  EXP15_xgboost_meta_stacking.py  EXP16_surp_attack.py  EXP17_icp_mia_sp.py  EXP18_hybrid_optgap.py  EXP19_buzzer_cmi.py  EXP20_buzzer_plus.py  EXP21_gradient_sliding_window.py  EXP22_selective_layer_ensemble.py  EXP23_gradient_direction_variance.py  EXP24_gradient_perturbation_stability.py  EXP25_cross_layer_correlation.py  EXP26_early_settling_ratio.py  EXP27_jsd_weighted_gradient.py  EXP28_delta_jsd_trajectory.py  EXP29_attention_early_settling.py  EXP30_privacy_vulnerable_layers.py  EXP31_tail_loss_delta.py  EXP32_ormia_gradient_stability.py  EXP33_camia_context_dynamics.py  EXP34_blockwise_privacy_signature.py  EXP35_gradsim_profile_matching.py  EXP36_token_memorization_fingerprint.py  EXP37_loss_cliff_derivative.py  EXP38_master_xgboost_stacker.py  (+18 more)
(+82 files in other folders)
