[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PoisonedChalice"
version = "0.1.0"
description = "Membership inference attacks for code models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.64.0",
    "transformers>=4.48.0",
    "torch>=2.2.0",
    "datasets>=4.4.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    "accelerate>=1.12.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
run = "run:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
exclude = ["plots", "results"]